name:           vimPlayground
version:        0.0.1
author:         Alex Babkin
maintainer:     ababkin@gmail.com
license:        AllRightsReserved
cabal-version:  >=1.8
build-type:     Simple


-- taken from here: https://github.com/VictorDenisov/vim-netbeans
-- not sure how to just include this library (not on hackage) so just including the source code
library
        hs-source-dirs:         src
        exposed-modules:        Vim.Netbeans
        other-modules:          Vim.Netbeans.Protocol
        build-depends:          base >= 4 && <= 5
                              , containers >= 0.4.2.1
                              , binary >= 0.5.1.0
                              , bytestring >= 0.9.2.1
                              , transformers >= 0.3.0.0
                              , mtl >= 2.1.2
                              , network >= 2.3.0.14
                              , parsec >= 3.1.3
                              , stm >= 2.3
                              , monadIO
        extensions:    GeneralizedNewtypeDeriving

Flag Haste-inst
  Description: either if it is being compiled with haste-inst or with cabal
  Default: False

executable VimPlayground
  if flag(haste-inst)
    hs-source-dirs: src
    main-is: Main.hs
    buildable: True
    ghc-options: --output-html
    build-depends: 
        base >4.0 && <5
      , transformers
      , haste-lib

  else
    hs-source-dirs: src
    main-is:        Main.hs
    other-modules:  Vim.Netbeans
                 ,  Vim.Netbeans.Protocol
    build-depends:  
        base >= 4 && <= 5
      , transformers >= 0.3.0.0
      , containers >= 0.4.2.1
      , binary >= 0.5.1.0
      , bytestring >= 0.9.2.1
      , transformers >= 0.3.0.0
      , mtl >= 2.1.2
      , network >= 2.3.0.14
      , parsec >= 3.1.3
      , stm >= 2.3
      , monadIO
      , haste-compiler
    extensions:    GeneralizedNewtypeDeriving
